# mcp-context-forge

./: .bumpversion.cfg  .coveragerc  .dockerignore  .env.ce.example  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-lite.yaml  .pylintrc  .pylintrc.plugins  .secrets.baseline  .spellcheck-en.txt  .yamllint  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Containerfile  Containerfile.lite  Containerfile.scratch  DEVELOPING.md  MANIFEST.in  MIGRATION-0.7.0.md  MULTIPLATFORM.md  Makefile  README.md  SECURITY.md  SECURITY_VALIDATION.md  TESTING.md  conftest.py  docker-compose-debug.yml  docker-compose-embedded.yml  docker-compose-performance.yml  docker-compose-verbose-logging.yml  docker-compose.mariadb.yml  docker-compose.override.lite.yml  docker-compose.phoenix-simple.yml  docker-compose.sso.yml  docker-compose.with-langfuse.yml  (+29 more)
.github/: CODEOWNERS  actionlint.yaml  (+2 more)
agent_runtimes/langchain_agent/: .env.example  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  __init__.py  agent_langchain.py  app.py  config.py  env_utils.py  models.py  pyproject.toml  requirements.txt  start_agent.py
agent_runtimes/langchain_agent/tests/: test_agent_langchain.py  test_cors_config.py  test_env_utils.py
docs/: base.yml  (+5 more)
mcp-servers/python/chunker_server/: pyproject.toml
mcp-servers/python/chunker_server/src/chunker_server/: server_fastmcp.py
mcp-servers/python/csv_pandas_chat_server/: Containerfile  pyproject.toml
mcp-servers/python/data_analysis_server/: Containerfile  Makefile  README.md  pyproject.toml  requirements.txt
mcp-servers/python/docx_server/: Containerfile  pyproject.toml
mcp-servers/python/mcp-rss-search/: Containerfile  Makefile  README.md  pyproject.toml
mcp-servers/python/mcp_eval_server/: Containerfile  Makefile  README.md  pyproject.toml
mcp-servers/python/mcp_eval_server/custom-config/: models.yaml
mcp-servers/python/mcp_eval_server/mcp_eval_server/: __init__.py  server.py
mcp-servers/python/mermaid_server/: pyproject.toml
mcp-servers/python/output_schema_test_server/: README.md  TESTING.md  pyproject.toml
mcp-servers/python/plotly_server/: pyproject.toml
mcp-servers/python/pm_mcp_server/: Containerfile  pyproject.toml
mcp-servers/python/pptx_server/: Containerfile  pyproject.toml
mcp-servers/python/qr_code_server/: Containerfile  Makefile  README.md  pyproject.toml
mcp-servers/python/qr_code_server/tests/: test_decoder.py  test_generator.py  test_server.py  test_utils.py  test_validator.py
mcp-servers/python/synthetic_data_server/: Containerfile  pyproject.toml
mcp-servers/python/url_to_markdown_server/: Containerfile  README.md  pyproject.toml
plugins_rust/: .gitignore  Cargo.toml  MIGRATION-RUST-IMPORTS.md  Makefile  QUICKSTART.md  README.md  pyproject.toml
plugins_rust/encoded_exfil_detection/: Cargo.toml  Makefile  compare_performance.py  pyproject.toml
plugins_rust/encoded_exfil_detection/benches/: encoded_exfil_detection.rs
plugins_rust/encoded_exfil_detection/python/encoded_exfil_detection_rust/: __init__.pyi
plugins_rust/encoded_exfil_detection/src/: lib.rs
plugins_rust/pii_filter/: Cargo.toml  Makefile  README.md  pyproject.toml
plugins_rust/pii_filter/benches/: pii_filter.rs
plugins_rust/pii_filter/benchmarks/: compare_pii_filter.py
plugins_rust/pii_filter/python/pii_filter_rust/: __init__.pyi
plugins_rust/pii_filter/src/: config.rs  detector.rs  lib.rs  masking.rs  patterns.rs
plugins_rust/rate_limiter/: Cargo.toml  Makefile  compare_performance.py  pyproject.toml
plugins_rust/rate_limiter/benches/: rate_limiter.rs
plugins_rust/rate_limiter/python/rate_limiter_rust/: __init__.pyi
plugins_rust/rate_limiter/src/: clock.rs  config.rs  engine.rs  lib.rs  memory.rs  redis_backend.rs  types.rs
plugins_rust/retry_with_backoff/: Cargo.toml  Makefile  compare_performance.py  pyproject.toml
plugins_rust/retry_with_backoff/python/retry_with_backoff_rust/: __init__.pyi
plugins_rust/retry_with_backoff/src/: lib.rs
plugins_rust/secrets_detection/: Cargo.toml  Makefile  README.md  compare_performance.py  pyproject.toml
plugins_rust/secrets_detection/benches/: secrets_detection.rs
plugins_rust/secrets_detection/examples/: heavy_workload.rs
plugins_rust/secrets_detection/python/secrets_detection_rust/: __init__.pyi
plugins_rust/secrets_detection/src/: config.rs  lib.rs  patterns.rs  scanner.rs
plugins_rust/src/: lib.rs
plugins_rust/url_reputation/: Cargo.toml  Makefile  README.md  bench_config.json  compare_performance.py  pyproject.toml  url_reputation_rust.pyi
plugins_rust/url_reputation/benches/: url_validation.rs
plugins_rust/url_reputation/src/: engine.rs  lib.rs  types.rs
plugins_rust/url_reputation/src/filters/: heuristic.rs  iana_tlds.rs  mod.rs  patterns.rs
tools_rust/mcp_runtime/: .gitignore  Cargo.toml  DEVELOPING.md  FOLLOWUPS.md  Makefile  README.md  RELEASE-CHECKLIST.md  STATUS.md  TESTING-DESIGN.md  clippy.toml
tools_rust/mcp_runtime/src/: config.rs  lib.rs  main.rs  observability.rs
tools_rust/mcp_runtime/tests/: cli.rs  runtime.rs
tools_rust/wrapper/: .gitignore  Cargo.toml  Makefile  README.md  deny.toml
tools_rust/wrapper/scripts/: tcpdump-collect.sh  test-fast-time-curl.sh  test-fast-time-wrapper.sh  test-sdk-server-sample.sh
tools_rust/wrapper/src/: config.rs  config_from_cli.rs  http_client.rs  json_rpc_id.rs  json_rpc_id_fast.rs  lib.rs  logger.rs  main.rs  main_init.rs  main_loop.rs  mcp_workers.rs  mcp_workers_write.rs  post_result.rs  stdio_process.rs  stdio_reader.rs  stdio_writer.rs  streamer.rs  streamer_auth.rs  streamer_error.rs  streamer_id.rs  streamer_lines.rs  streamer_new.rs  streamer_post.rs  streamer_send.rs  streamer_session.rs
tools_rust/wrapper/tests/: test_config.rs  test_error.rs  test_id_parser.rs  test_lines_processing.rs  test_logger.rs  test_logger_file.rs  test_main.rs  test_main_loop.rs  test_mcp_workers.rs  test_mcp_workers_write.rs  test_reader.rs  test_streamer_cert.rs  test_streamer_no_session_id.rs  test_streamer_post.rs  test_streamer_post_fail.rs  test_streamer_session.rs  test_writer.rs
(+2128 files in other folders)
